--- a/series.conf
+++ b/series.conf
@@ -2241,6 +2241,7 @@
 	patches.kernel.org/6.15.8-128-ice-check-correct-pointer-in-fwlog-debugfs.patch
 	patches.kernel.org/6.15.8-129-usb-net-sierra-check-for-no-status-endpoint.patch
 	patches.kernel.org/6.15.8-130-loop-use-kiocb-helpers-to-fix-lockdep-warning.patch
+	patches.kernel.org/6.15.8-131-riscv-Enable-interrupt-during-exception-handli.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
