--- a/series.conf
+++ b/series.conf
@@ -2252,6 +2252,7 @@
 	patches.kernel.org/6.15.8-139-Bluetooth-hci_dev-replace-quirks-integer-by-qu.patch
 	patches.kernel.org/6.15.8-140-Bluetooth-btusb-QCA-Fix-downloading-wrong-NVM-.patch
 	patches.kernel.org/6.15.8-141-net-mlx5-Correctly-set-gso_size-when-LRO-is-us.patch
+	patches.kernel.org/6.15.8-142-net-airoha-fix-potential-use-after-free-in-air.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
