--- a/series.conf
+++ b/series.conf
@@ -2132,6 +2132,7 @@
 	patches.kernel.org/6.15.8-019-nvmem-layouts-u-boot-env-remove-crc32-endianne.patch
 	patches.kernel.org/6.15.8-020-Input-xpad-set-correct-controller-type-for-Ace.patch
 	patches.kernel.org/6.15.8-021-pch_uart-Fix-dma_sync_sg_for_device-nents-valu.patch
+	patches.kernel.org/6.15.8-022-spi-Add-check-for-8-bit-transfer-with-8-IO-mod.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
