--- a/series.conf
+++ b/series.conf
@@ -2143,6 +2143,7 @@
 	patches.kernel.org/6.15.8-030-tracing-osnoise-Fix-crash-in-timerlat_dump_sta.patch
 	patches.kernel.org/6.15.8-031-rust-init-Fix-generics-in-_init-macros.patch
 	patches.kernel.org/6.15.8-032-objtool-rust-add-one-more-noreturn-Rust-functi.patch
+	patches.kernel.org/6.15.8-033-drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
