--- a/series.conf
+++ b/series.conf
@@ -2220,6 +2220,7 @@
 	patches.kernel.org/6.15.8-107-wifi-iwlwifi-mask-reserved-bits-in-chan_state_.patch
 	patches.kernel.org/6.15.8-108-cachefiles-Fix-the-incorrect-return-value-in-_.patch
 	patches.kernel.org/6.15.8-109-ALSA-compress_offload-tighten-ioctl-command-nu.patch
+	patches.kernel.org/6.15.8-110-net-emaclite-Fix-missing-pointer-increment-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
