--- a/series.conf
+++ b/series.conf
@@ -2179,6 +2179,7 @@
 	patches.kernel.org/6.15.8-066-mmc-sdhci-pci-Quirk-for-broken-command-queuing.patch
 	patches.kernel.org/6.15.8-067-mmc-sdhci_am654-Workaround-for-Errata-i2312.patch
 	patches.kernel.org/6.15.8-068-net-stmmac-intel-populate-entire-system_counte.patch
+	patches.kernel.org/6.15.8-069-net-libwx-remove-duplicate-page_pool_put_full_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
