--- a/series.conf
+++ b/series.conf
@@ -2232,6 +2232,7 @@
 	patches.kernel.org/6.15.8-119-net-phy-Don-t-register-LEDs-for-genphy.patch
 	patches.kernel.org/6.15.8-120-nvme-revert-the-cross-controller-atomic-write-.patch
 	patches.kernel.org/6.15.8-121-nvme-fix-misaccounting-of-nvme-mpath-inflight-.patch
+	patches.kernel.org/6.15.8-122-nvmet-tcp-fix-callback-lock-for-TLS-handshake.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
