--- a/series.conf
+++ b/series.conf
@@ -2117,6 +2117,7 @@
 	patches.kernel.org/6.15.8-004-USB-serial-option-add-Telit-Cinterion-FE910C04.patch
 	patches.kernel.org/6.15.8-005-USB-serial-option-add-Foxconn-T99W640.patch
 	patches.kernel.org/6.15.8-006-USB-serial-ftdi_sio-add-support-for-NDI-EMGUID.patch
+	patches.kernel.org/6.15.8-007-usb-musb-fix-gadget-state-on-disconnect.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
