--- a/series.conf
+++ b/series.conf
@@ -2136,6 +2136,7 @@
 	patches.kernel.org/6.15.8-023-tools-hv-fcopy-Fix-irregularities-with-size-of.patch
 	patches.kernel.org/6.15.8-024-dm-bufio-fix-sched-in-atomic-context.patch
 	patches.kernel.org/6.15.8-025-HID-core-ensure-the-allocated-report-buffer-ca.patch
+	patches.kernel.org/6.15.8-026-HID-core-ensure-__hid_request-reserves-the-rep.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
