--- a/series.conf
+++ b/series.conf
@@ -2121,6 +2121,7 @@
 	patches.kernel.org/6.15.8-008-usb-dwc2-gadget-Fix-enter-to-hibernation-for-U.patch
 	patches.kernel.org/6.15.8-009-usb-gadget-configfs-Fix-OOB-read-on-empty-stri.patch
 	patches.kernel.org/6.15.8-010-i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
+	patches.kernel.org/6.15.8-011-i2c-stm32f7-unmap-DMA-mapped-buffer.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
