--- a/series.conf
+++ b/series.conf
@@ -2151,6 +2151,7 @@
 	patches.kernel.org/6.15.8-038-netfs-Fix-copy-to-cache-so-that-it-performs-co.patch
 	patches.kernel.org/6.15.8-039-netfs-Fix-race-between-cache-write-completion-.patch
 	patches.kernel.org/6.15.8-040-ALSA-hda-realtek-Fix-mute-LED-for-HP-Victus-16.patch
+	patches.kernel.org/6.15.8-041-ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Strix-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
