--- a/series.conf
+++ b/series.conf
@@ -2275,6 +2275,7 @@
 	patches.kernel.org/6.15.8-162-drm-mediatek-Add-wait_event_timeout-when-disab.patch
 	patches.kernel.org/6.15.8-163-drm-mediatek-only-announce-AFBC-if-really-supp.patch
 	patches.kernel.org/6.15.8-164-libbpf-Fix-handling-of-BPF-arena-relocations.patch
+	patches.kernel.org/6.15.8-165-efivarfs-Fix-memory-leak-of-efivarfs_fs_info-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
