--- a/series.conf
+++ b/series.conf
@@ -8765,6 +8765,7 @@
 	patches.kernel.org/6.12.40-114-Bluetooth-SMP-If-an-unallowed-command-is-rece.patch
 	patches.kernel.org/6.12.40-115-Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER.patch
 	patches.kernel.org/6.12.40-116-Bluetooth-hci_core-add-missing-braces-when-us.patch
+	patches.kernel.org/6.12.40-117-Bluetooth-btusb-QCA-Fix-downloading-wrong-NVM.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
