--- a/series.conf
+++ b/series.conf
@@ -8688,6 +8688,7 @@
 	patches.kernel.org/6.12.40-037-mptcp-reset-fallback-status-gracefully-at-dis.patch
 	patches.kernel.org/6.12.40-038-phonet-pep-Move-call-to-pn_skb_get_dst_sockad.patch
 	patches.kernel.org/6.12.40-039-net-mlx5-Update-the-list-of-the-PCI-supported.patch
+	patches.kernel.org/6.12.40-040-arm64-dts-imx8mp-venice-gw74xx-fix-TPM-SPI-fr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
