--- a/series.conf
+++ b/series.conf
@@ -6615,6 +6615,7 @@
 	patches.suse/x86-bhi-Add-BHI-stubs.patch
 	patches.suse/x86-ibt-Implement-FineIBT-BHI-mitigation.patch
 	patches.suse/x86-ibt-Optimize-the-fineibt-bhi-arity-1-case.patch
+	patches.suse/x86-percpu-Disable-named-address-spaces-for-UBSAN_BOOL-wit.patch
 	patches.suse/x86-kaslr-Reduce-KASLR-entropy-on-most-x86-systems.patch
 	patches.suse/x86-cpufeatures-Rename-X86_CMPXCHG64-to-X86_CX8.patch
 	patches.suse/x86-speculation-Simplify-and-make-CALL_NOSPEC-consistent.patch
