--- a/blacklist.conf
+++ b/blacklist.conf
@@ -777,3 +777,4 @@ c31e72d021db2714df03df6c42855a1db592716c # git-fixes: not applicable
 a3bdd8f5c2217e1cb35db02c2eed36ea20fb50f5 # usb-audio: no need for modified fix
 a943d76352dbb4707a5e5537bbe696c00f5ddd36 # bsc#1242745 kerneldoc fix
 1b0449544c6482179ac84530b61fc192a6527bfd # CVE-2025-37834 https://bugzilla.suse.com/show_bug.cgi?id=1242925#c1
+062a7f0ff46eb57aff526897bd2bebfdb1d3046a # CVE-2024-35869 https://bugzilla.suse.com/show_bug.cgi?id=1224679#c3
