--- a/series.conf
+++ b/series.conf
@@ -6629,6 +6629,7 @@
 	patches.suse/x86-amd_node-Add-SMN-offsets-to-exclusive-region-access.patch
 	patches.suse/x86-amd_node-Add-support-for-debugfs-access-to-SMN-registe.patch
 	patches.suse/zstd-Increase-DYNAMIC_BMI2-GCC-version-cutoff-from-4.patch
+	patches.suse/x86-fpu-Fully-optimize-out-WARN_ON_FPU.patch
 	patches.suse/x86-usercopy-Fix-kernel-doc-func-param-name-in-clean_cache.patch
 	patches.suse/selftests-x86-syscall-Fix-coccinelle-WARNING-recomme.patch
 	patches.suse/x86-coco-Replace-static-const-cc_mask-with-the-newly-intro.patch
