--- a/series.conf
+++ b/series.conf
@@ -6632,6 +6632,7 @@
 	patches.suse/x86-headers-Replace-__ASSEMBLY__-with-__ASSEMBLER__-in-UAP.patch
 	patches.suse/zstd-Increase-DYNAMIC_BMI2-GCC-version-cutoff-from-4.patch
 	patches.suse/x86-fpu-Fully-optimize-out-WARN_ON_FPU.patch
+	patches.suse/x86-fpu-Fix-guest-FPU-state-buffer-allocation-size.patch
 	patches.suse/x86-fpu-xstate-Fix-inconsistencies-in-guest-FPU-xfeatures.patch
 	patches.suse/x86-usercopy-Fix-kernel-doc-func-param-name-in-clean_cache.patch
 	patches.suse/selftests-x86-syscall-Fix-coccinelle-WARNING-recomme.patch
