--- a/series.conf
+++ b/series.conf
@@ -10291,6 +10291,7 @@
 	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
+	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
