--- a/scripts/python/git_sort/git_sort.yaml
+++ b/scripts/python/git_sort/git_sort.yaml
@@ -109,3 +109,4 @@
 - ["akpm/mm.git", "mm-stable"]
 - ["akpm/mm.git", "mm-nonmm-stable"]
 - ["cxl/cxl.git", "next"]
+- ["https://github.com/broadcom/stblinux.git", "next"]
