--- a/series.conf
+++ b/series.conf
@@ -10292,6 +10292,7 @@
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
 	patches.suse/xfs-remove-unused-trace-event-xfs_attr_remove_iter_return.patch
+	patches.suse/xfs-remove-unused-event-xlog_iclog_want_sync.patch
 	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
 
