--- a/series.conf
+++ b/series.conf
@@ -10295,6 +10295,7 @@
 	patches.suse/xfs-remove-unused-event-xlog_iclog_want_sync.patch
 	patches.suse/xfs-remove-unused-event-xfs_ioctl_clone.patch
 	patches.suse/xfs-remove-unused-xfs_reflink_compare_extents-events.patch
+	patches.suse/xfs-remove-unused-trace-event-xfs_attr_rmtval_set.patch
 	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
 
