--- a/series.conf
+++ b/series.conf
@@ -10298,6 +10298,7 @@
 	patches.suse/xfs-remove-unused-trace-event-xfs_attr_rmtval_set.patch
 	patches.suse/xfs-remove-unused-xfs_attr-events.patch
 	patches.suse/xfs-remove-unused-event-xfs_attr_node_removename.patch
+	patches.suse/xfs-remove-unused-event-xfs_alloc_near_error.patch
 	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
 
