--- a/series.conf
+++ b/series.conf
@@ -10305,6 +10305,7 @@
 	patches.suse/xfs-only-create-event-xfs_file_compat_ioctl-when-CONFIG_COMPAT-is-configure.patch
 	patches.suse/xfs-change-xfs_xattr_class-from-a-TRACE_EVENT-to-DECLARE_EVENT_CLASS.patch
 	patches.suse/xfs-remove-unused-trace-event-xfs_log_cil_return.patch
+	patches.suse/xfs-remove-unused-trace-event-xfs_discard_rtrelax.patch
 	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
 
