--- a/series.conf
+++ b/series.conf
@@ -67,6 +67,7 @@
         patches.suse/clk-rp1-Add-support-for-clocks-provided-by-RP1.patch
         patches.suse/pinctrl-rp1-Implement-RaspberryPi-RP1-gpio-support.patch
         patches.suse/misc-rp1-RaspberryPi-RP1-misc-driver.patch
+        patches.suse/MAINTAINERS-add-Raspberry-Pi-RP1-section.patch
 
 	########################################################
 	# end of sorted patches
