--- a/series.conf
+++ b/series.conf
@@ -64,6 +64,7 @@
         patches.suse/arm64-dts-broadcom-Add-board-DTS-for-Rpi5-which-includes-RP1-node.patch
         patches.suse/arm64-dts-broadcom-Add-overlay-for-RP1-device.patch
         patches.suse/dt-bindings-clock-Add-RaspberryPi-RP1-clock-bindings.patch
+        patches.suse/clk-rp1-Add-support-for-clocks-provided-by-RP1.patch
 
 	########################################################
 	# end of sorted patches
