--- a/series.conf
+++ b/series.conf
@@ -10083,6 +10083,7 @@
 	patches.suse/scsi-core-Enforce-unlimited-max_segment_size-when-virt_bou.patch
 	patches.suse/btrfs-fix-missing-error-handling-when-searching-for-.patch
 	patches.suse/btrfs-fix-iteration-of-extrefs-during-log-replay.patch
+	patches.suse/btrfs-fix-inode-lookup-error-handling-during-log-rep.patch
 	patches.suse/btrfs-record-new-subvolume-in-parent-dir-earlier-to-.patch
 	patches.suse/fs-export-anon_inode_make_secure_inode-and-fix-secre.patch
 	patches.suse/nvme-Fix-incorrect-cdw15-value-in-passthru-error-log.patch
