--- a/series.conf
+++ b/series.conf
@@ -10085,6 +10085,7 @@
 	patches.suse/btrfs-fix-iteration-of-extrefs-during-log-replay.patch
 	patches.suse/btrfs-fix-inode-lookup-error-handling-during-log-rep.patch
 	patches.suse/btrfs-record-new-subvolume-in-parent-dir-earlier-to-.patch
+	patches.suse/btrfs-propagate-last_unlink_trans-earlier-when-doing.patch
 	patches.suse/fs-export-anon_inode_make_secure_inode-and-fix-secre.patch
 	patches.suse/nvme-Fix-incorrect-cdw15-value-in-passthru-error-log.patch
 	patches.suse/nvmet-fix-memory-leak-of-bio-integrity.patch
