--- a/series.conf
+++ b/series.conf
@@ -7295,6 +7295,7 @@
 	patches.suse/btrfs-harden-block_group-bg_list-against-list_del-ra.patch
 	patches.suse/btrfs-make-btrfs_discard_workfn-block_group-ref-expl.patch
 	patches.suse/btrfs-explicitly-ref-count-block_group-on-new_bgs-li.patch
+	patches.suse/btrfs-tests-fix-chunk-map-leak-after-failure-to-add-.patch
 	patches.suse/btrfs-prepare-btrfs_page_mkwrite-for-large-folios.patch
 	patches.suse/btrfs-simplify-condition-for-logging-new-dentries-at-btrfs.patch
 	patches.suse/btrfs-remove-end_no_trans-label-from-btrfs_log_inode_paren.patch
