--- a/series.conf
+++ b/series.conf
@@ -10165,6 +10165,7 @@
 	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
 	patches.suse/pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
 	patches.suse/eventpoll-don-t-decrement-ep-refcount-while-still-ho.patch
+	patches.suse/KVM-arm64-Adjust-range-correctly-during-host-stage-2.patch
 	patches.suse/KVM-TDX-Exit-to-userspace-for-SetupEventNotifyInterr.patch
 	patches.suse/KVM-TDX-Report-supported-optional-TDVMCALLs-in-TDX-c.patch
 	patches.suse/KVM-SVM-Reject-SEV-ES-intra-host-migration-if-vCPU-c.patch
