--- a/series.conf
+++ b/series.conf
@@ -10345,6 +10345,7 @@
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
 	patches.suse/btrfs-clear-dirty-status-from-extent-buffer-on-error.patch
+	patches.suse/btrfs-qgroup-set-quota-enabled-bit-if-quota-disable-.patch
 	patches.suse/btrfs-fix-ssd_spread-overallocation.patch
 	patches.suse/btrfs-don-t-ignore-inode-missing-when-replaying-log-.patch
 	patches.suse/btrfs-don-t-skip-remaining-extrefs-if-dir-not-found-.patch
