--- a/series.conf
+++ b/series.conf
@@ -34285,6 +34285,7 @@
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Make-code-comment-in-.free-more-useful.patch
+	patches.suse/pwm-tiehrpwm-Fix-corner-case-in-clock-divisor-calcul.patch
 
 	########################################################
 	# end of sorted patches
