--- a/series.conf
+++ b/series.conf
@@ -34296,6 +34296,7 @@
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
+	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
 
 	########################################################
 	# end of sorted patches
