--- a/series.conf
+++ b/series.conf
@@ -34305,6 +34305,7 @@
 	patches.suse/i3c-Fix-default-I2C-adapter-timeout-value.patch
 	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
+	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
 
 	########################################################
 	# end of sorted patches
