--- a/series.conf
+++ b/series.conf
@@ -34299,6 +34299,7 @@
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
 	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 	patches.suse/pinctrl-samsung-Drop-unused-S3C24xx-driver-data.patch
+	patches.suse/pinctrl-renesas-Use-int-type-to-store-negative-error.patch
 
 	########################################################
 	# end of sorted patches
