--- a/series.conf
+++ b/series.conf
@@ -34284,6 +34284,7 @@
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
+	patches.suse/pwm-tiehrpwm-Make-code-comment-in-.free-more-useful.patch
 
 	########################################################
 	# end of sorted patches
