--- a/series.conf
+++ b/series.conf
@@ -34297,6 +34297,7 @@
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
+	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 
 	########################################################
 	# end of sorted patches
