--- a/series.conf
+++ b/series.conf
@@ -34282,6 +34282,7 @@
 	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
+	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 
 	########################################################
 	# end of sorted patches
