--- a/series.conf
+++ b/series.conf
@@ -34310,6 +34310,7 @@
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
 	patches.suse/ACPI-processor-idle-Fix-memory-leak-when-register-cp.patch
 	patches.suse/ACPI-property-Fix-buffer-properties-extraction-for-s.patch
+	patches.suse/ACPI-TAD-Add-missing-sysfs_remove_group-for-ACPI_TAD.patch
 
 	########################################################
 	# end of sorted patches
