--- a/series.conf
+++ b/series.conf
@@ -34300,6 +34300,7 @@
 	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 	patches.suse/pinctrl-samsung-Drop-unused-S3C24xx-driver-data.patch
 	patches.suse/pinctrl-renesas-Use-int-type-to-store-negative-error.patch
+	patches.suse/i2c-mediatek-fix-potential-incorrect-use-of-I2C_MAST.patch
 
 	########################################################
 	# end of sorted patches
