--- a/series.conf
+++ b/series.conf
@@ -34293,6 +34293,7 @@
 	patches.suse/spi-mtk-snfi-Remove-redundant-semicolons.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef-1ad5576.patch
+	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 
 	########################################################
 	# end of sorted patches
