--- a/series.conf
+++ b/series.conf
@@ -34286,6 +34286,7 @@
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Make-code-comment-in-.free-more-useful.patch
 	patches.suse/pwm-tiehrpwm-Fix-corner-case-in-clock-divisor-calcul.patch
+	patches.suse/mfd-vexpress-sysreg-Check-the-return-value-of-devm_g.patch
 
 	########################################################
 	# end of sorted patches
