--- a/series.conf
+++ b/series.conf
@@ -34307,6 +34307,7 @@
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
+	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
 
 	########################################################
 	# end of sorted patches
