--- a/series.conf
+++ b/series.conf
@@ -34314,6 +34314,7 @@
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
 	patches.suse/firmware-meson_sm-fix-device-leak-at-probe.patch
+	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
 
 	########################################################
 	# end of sorted patches
