--- a/series.conf
+++ b/series.conf
@@ -34304,6 +34304,7 @@
 	patches.suse/i2c-designware-Add-disabling-clocks-when-probe-fails.patch
 	patches.suse/i3c-Fix-default-I2C-adapter-timeout-value.patch
 	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
+	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 
 	########################################################
 	# end of sorted patches
