--- a/series.conf
+++ b/series.conf
@@ -34303,6 +34303,7 @@
 	patches.suse/i2c-mediatek-fix-potential-incorrect-use-of-I2C_MAST.patch
 	patches.suse/i2c-designware-Add-disabling-clocks-when-probe-fails.patch
 	patches.suse/i3c-Fix-default-I2C-adapter-timeout-value.patch
+	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
 
 	########################################################
 	# end of sorted patches
