--- a/series.conf
+++ b/series.conf
@@ -34294,6 +34294,7 @@
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef-1ad5576.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
+	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
 
 	########################################################
 	# end of sorted patches
