--- a/series.conf
+++ b/series.conf
@@ -34315,6 +34315,7 @@
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
 	patches.suse/firmware-meson_sm-fix-device-leak-at-probe.patch
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
+	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
 
 	########################################################
 	# end of sorted patches
