--- a/series.conf
+++ b/series.conf
@@ -55407,6 +55407,7 @@
 	patches.suse/IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-subscrip.patch
 	patches.suse/drm-ast-Use-msleep-instead-of-mdelay-for-edid-read.patch
 	patches.suse/drm-panthor-Defer-scheduler-entitiy-destruction-to-q.patch
+	patches.suse/i3c-master-svc-Use-manual-response-for-IBI-events.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
