--- a/series.conf
+++ b/series.conf
@@ -12020,6 +12020,7 @@
 	patches.suse/mmc-core-Fix-variable-shadowing-in-mmc_route_rpmb_fr.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
+	patches.suse/leds-leds-lp55xx-Use-correct-address-for-memory-prog.patch
 
 	########################################################
 	# end of sorted patches
