--- a/series.conf
+++ b/series.conf
@@ -12044,6 +12044,7 @@
 	patches.suse/ACPI-TAD-Add-missing-sysfs_remove_group-for-ACPI_TAD.patch
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
 	patches.suse/soc-qcom-rpmh-rsc-Unconditionally-clear-_TRIGGER-bit.patch
+	patches.suse/firmware-arm_scmi-Mark-VirtIO-ready-before-registeri.patch
 
 	########################################################
 	# end of sorted patches
