--- a/series.conf
+++ b/series.conf
@@ -12015,6 +12015,7 @@
 	patches.suse/spi-mtk-snfi-Remove-redundant-semicolons.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef.patch
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef-1ad5576.patch
+	patches.suse/spi-cadence-quadspi-Fix-cqspi_setup_flash.patch
 
 	########################################################
 	# end of sorted patches
