--- a/series.conf
+++ b/series.conf
@@ -12025,6 +12025,7 @@
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
 	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
+	patches.suse/pinctrl-renesas-rzg2l-Fix-invalid-unsigned-return-in.patch
 
 	########################################################
 	# end of sorted patches
