--- a/series.conf
+++ b/series.conf
@@ -12034,6 +12034,7 @@
 	patches.suse/i3c-Fix-default-I2C-adapter-timeout-value.patch
 	patches.suse/i3c-master-svc-Use-manual-response-for-IBI-events.patch
 	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
+	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 
 	########################################################
 	# end of sorted patches
