--- a/series.conf
+++ b/series.conf
@@ -12037,6 +12037,7 @@
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 	patches.suse/PM-devfreq-rockchip-dfi-double-count-on-RK3588.patch
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
+	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
 
 	########################################################
 	# end of sorted patches
