--- a/series.conf
+++ b/series.conf
@@ -12028,6 +12028,7 @@
 	patches.suse/pinctrl-renesas-rzg2l-Fix-invalid-unsigned-return-in.patch
 	patches.suse/pinctrl-samsung-Drop-unused-S3C24xx-driver-data.patch
 	patches.suse/pinctrl-renesas-Use-int-type-to-store-negative-error.patch
+	patches.suse/i2c-mediatek-fix-potential-incorrect-use-of-I2C_MAST.patch
 
 	########################################################
 	# end of sorted patches
