--- a/series.conf
+++ b/series.conf
@@ -12006,6 +12006,7 @@
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-in-.fre.patch
 	patches.suse/pwm-tiehrpwm-Make-code-comment-in-.free-more-useful.patch
+	patches.suse/pwm-tiehrpwm-Fix-various-off-by-one-errors-in-duty-c.patch
 
 	########################################################
 	# end of sorted patches
