--- a/series.conf
+++ b/series.conf
@@ -12027,6 +12027,7 @@
 	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
 	patches.suse/pinctrl-renesas-rzg2l-Fix-invalid-unsigned-return-in.patch
 	patches.suse/pinctrl-samsung-Drop-unused-S3C24xx-driver-data.patch
+	patches.suse/pinctrl-renesas-Use-int-type-to-store-negative-error.patch
 
 	########################################################
 	# end of sorted patches
