--- a/series.conf
+++ b/series.conf
@@ -12032,6 +12032,7 @@
 	patches.suse/i2c-designware-Fix-clock-issue-when-PM-is-disabled.patch
 	patches.suse/i2c-designware-Add-disabling-clocks-when-probe-fails.patch
 	patches.suse/i3c-Fix-default-I2C-adapter-timeout-value.patch
+	patches.suse/i3c-master-svc-Use-manual-response-for-IBI-events.patch
 
 	########################################################
 	# end of sorted patches
