--- a/series.conf
+++ b/series.conf
@@ -12019,6 +12019,7 @@
 	patches.suse/spi-fix-return-code-when-spi-device-has-too-many-chi.patch
 	patches.suse/mmc-core-Fix-variable-shadowing-in-mmc_route_rpmb_fr.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
+	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
 
 	########################################################
 	# end of sorted patches
