--- a/series.conf
+++ b/series.conf
@@ -12139,6 +12139,7 @@
 	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
+	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
