--- a/series.conf
+++ b/series.conf
@@ -10939,6 +10939,7 @@
 	patches.suse/thermal-sysfs-Return-ENODATA-instead-of-EAGAIN-for-r.patch
 	patches.suse/ALSA-usb-audio-Fix-code-alignment-in-mixer_quirks.patch
 	patches.suse/ALSA-usb-audio-Avoid-precedence-issues-in-mixer_quir.patch
+	patches.suse/ALSA-usb-audio-Fix-block-comments-in-mixer_quirks.patch
 	patches.suse/ALSA-pcm-Rewrite-recalculate_boundary-to-avoid-costl.patch
 	patches.suse/ALSA-hda-ca0132-Fix-buffer-overflow-in-add_tuning_co.patch
 	patches.suse/ALSA-intel8x0-Fix-incorrect-codec-index-usage-in-mix.patch
