--- a/series.conf
+++ b/series.conf
@@ -10949,6 +10949,7 @@
 	patches.suse/ALSA-hda-ca0132-Fix-buffer-overflow-in-add_tuning_co.patch
 	patches.suse/ALSA-usb-audio-Convert-comma-to-semicolon.patch
 	patches.suse/ALSA-hda-realtek-Add-support-for-ASUS-NUC-using-CS35.patch
+	patches.suse/ALSA-usb-audio-Fix-build-with-CONFIG_INPUT-n.patch
 	patches.suse/ALSA-intel8x0-Fix-incorrect-codec-index-usage-in-mix.patch
 	patches.suse/ALSA-hda-Disable-jack-polling-at-shutdown.patch
 	patches.suse/ALSA-hda-Handle-the-jack-polling-always-via-a-work.patch
