--- a/series.conf
+++ b/series.conf
@@ -12132,6 +12132,7 @@
 	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
 	patches.suse/ASoC-qcom-audioreach-fix-potential-null-pointer-dere.patch
 	patches.suse/ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-input-map.patch
+	patches.suse/ASoC-Intel-bytcr_rt5640-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
