--- a/series.conf
+++ b/series.conf
@@ -12041,6 +12041,7 @@
 	patches.suse/iommu-vt-d-Fix-__domain_mapping-s-usage-of-switch_to.patch
 	patches.suse/firewire-core-fix-overlooked-update-of-subsystem-ABI.patch
 	patches.suse/btrfs-tree-checker-fix-the-incorrect-inode-ref-size-.patch
+	patches.suse/HID-asus-add-support-for-missing-PX-series-fn-keys.patch
 	patches.suse/HID-amd_sfh-Add-sync-across-amd-sfh-work-functions.patch
 	patches.suse/IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-subscrip.patch
 	patches.suse/cpufreq-Initialize-cpufreq-based-invariance-before-subsys.patch
