--- a/series.conf
+++ b/series.conf
@@ -12153,6 +12153,7 @@
 	patches.suse/drm-amd-pm-Fix-si_upload_smc_data-v3.patch
 	patches.suse/drm-amd-pm-Adjust-si_upload_smc_data-register-progra.patch
 	patches.suse/drm-amd-pm-Treat-zero-vblank-time-as-too-short-in-si.patch
+	patches.suse/drm-amd-pm-Disable-MCLK-switching-with-non-DC-at-120.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
