--- a/series.conf
+++ b/series.conf
@@ -12157,6 +12157,7 @@
 	patches.suse/drm-amd-pm-Disable-SCLK-switching-on-Oland-with-high.patch
 	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
+	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
