--- a/series.conf
+++ b/series.conf
@@ -12123,6 +12123,7 @@
 	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8183-prob.patch
 	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8192-prob.patch
 	patches.suse/firmware-meson_sm-fix-device-leak-at-probe.patch
+	patches.suse/firmware-firmware-meson-sm-fix-compile-test-default.patch
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
 	patches.suse/nvme-auth-update-bi_directional-flag.patch
